@@ -263,7 +263,7 @@ action_import_subfactory=Paste a string and select the subfactories you want to 
 action_archive_subfactory=Move the selected subfactory to archive, which you can open using the archive button on the very left
 action_unarchive_subfactory=Move the selected subfactory back out of archive, back into the main list
 action_duplicate_subfactory=Duplicate the selected subfactory, creating a perfect copy
-action_add_subfactory=Create a new subfactory
+action_add_subfactory=Create a new subfactory\n[font=default-semibold][color=#84CDEC]Alt-click[/color][/font] to choose a product right away
 action_edit_subfactory=Edit the name and icon of the selected subfactory
 action_delete_subfactory=Remove the selected subfactory irreversibly
 
