@@ -2,6 +2,7 @@
 Version: 0.00.00
 Date: 00. 00. 0000
   Features:
+    - Alt-clicking the 'add subfactory'-button now takes you directly to the product picker
     - Middle-clicking the grab handle on any dialog now re-centers it
   Changes:
     - The matrix solver now allows you to select products are free items as well, which comes in handy when you subfactory has very few recipes
